ingress/traefik-httpd.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: ingress-httpd
  annotations:
    kubernetes.io/ingress.class: traefik
  labels:
    traefik-ingress: abcd
spec:
  rules:
  -  http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: httpd-service
            port:
              number: 8080
